Obtener el tipo de diario del ajuste